--- a/templates/index.html
+++ b/templates/index.html
@@ -144,7 +144,7 @@
             max="5"
             value="1"
         /></label>
-        <button type="submit">del</button>
+        <button type="submit">add</button>
       </form>
       <hr />
     </section>
