--- a/templates/index.html
+++ b/templates/index.html
@@ -4,110 +4,7 @@
     <meta charset="utf-8" />
     <title>GoTodo</title>
     <meta name="color-scheme" content="dark light" />
-    <style>
-      @view-transition {
-        navigation: auto;
-      }
-      ::view-transition-old(root),
-      ::view-transition-new(root) {
-        animation: fade 0.3s ease both;
-      }
-      @keyframes fade {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-      * {
-        font-family: monospace;
-      }
-      :root {
-        --button-bg: #272727;
-        --button-fg: #ffffff;
-        --button-hover-bg: #454545;
-        --button-hover-fg: #ffffff;
-        --button-wrapper-fg: #aaaaaa;
-      }
-      .selected {
-        --button-bg: #ffffff;
-        --button-fg: #171717;
-        --button-hover-bg: #c1c1c1;
-        --button-hover-fg: #171717;
-        --button-wrapper-fg: #555555;
-      }
-      a,
-      button {
-        all: initial;
-        display: inline-flex;
-        height: min-content;
-        background-color: var(--button-bg);
-        color: var(--button-fg);
-        font-family: monospace;
-      }
-      a:hover,
-      a:focus,
-      button:hover,
-      button:focus {
-        background-color: var(--button-hover-bg);
-        color: var(--button-hover-fg);
-        cursor: pointer;
-      }
-      a::before,
-      button::before {
-        content: "[";
-        color: var(--button-wrapper-fg);
-      }
-      a::after,
-      button::after {
-        content: "]";
-        color:var(--button-wrapper-fg);
-      }
-      html {
-        min-height: 100%;
-        display: flex;
-      }
-      body {
-        margin: auto;
-        padding: 48px 32px;
-        max-width: 600px;
-        width: 100%;
-      }
-      hr {
-        border-color: #aaaaaa;
-      }
-      ul {
-        display: flex;
-        flex-direction: column;
-        padding: 0;
-      }
-      li {
-        display: flex;
-        gap: 8px;
-      }
-      .todo {
-        opacity: 0.4;
-      }
-      ul:has(.done) .todo {
-        opacity: 0.8;
-      }
-      .done,
-      .deadline {
-        opacity: calc(0.4 * var(--priority) / 5 + 0.3);
-      }
-      .summary {
-        flex: 1;
-        opacity: calc(0.6 * var(--priority) / 5 + 0.4);
-      }
-      label {
-        display: flex;
-        gap: 8px;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 8px;
-      }
-    </style>
+    <link rel="stylesheet" href="/assets/style.css" />
   </head>
   <body>
     {{if .Flash}}
