feat(web): add favicon

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Editing: {{htmlEsc .Match}}</title>
+    <title>editing {{htmlEsc .Match}} | gotodo</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
     <meta name="color-scheme" content="dark light" />
     <link rel="stylesheet" href="/assets/style.css" />
   </head>
